fix map layout issues for nexus 10

--- a/phonegap/sass/screen/_main.scss
+++ b/phonegap/sass/screen/_main.scss
@@ -201,8 +201,8 @@ html, body{
     background-position: 50% 50%;
 }
 
-@media screen and (device-width: 600px) and (device-height: 905px) and (-webkit-min-device-pixel-ratio: 1.331) and (-webkit-max-device-pixel-ratio: 1.332) {
-    body{
+@media only screen and (min-device-width : 603px) and (max-device-width : 966px){
+    html{
         font-size: 80%;
     }
 }
